--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "javascript-template-action",
-  "version": "0.0.0",
+  "name": "azul-github-isssue-labeller",
+  "version": "1.0.0",
   "private": true,
-  "description": "JavaScript template action",
+  "description": "Automatically apply a label to new Github issues in a repository",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -10,17 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-template.git"
+    "url": "git+https://github.com/HumanCellAtlas/azul-github-labeler-action.git"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "YourNameOrOrganization",
+  "author": "HumanCellAtlas",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.0.0"
+    "@actions/core": "^1.0.0",
+    "@actions/github": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
